# botcli

./: chat_history.json  generated_code.html  generated_code.python  tictactoe.py
ai-gemini-cli/: .env  README.md  main.py  pyproject.toml  requirements.txt
ai-gemini-cli/src/: cli.py
ai-gemini-cli/src/ai_gemini/: main.py
ai-gemini-cli/src/ai_gemini/commands/: chat.py  stream.py
ai-gemini-cli/src/ai_gemini/services/: gemini_service.py
ai-gemini-cli/src/ai_gemini/utils/: logger.py  prompt.py
ai-gemini-cli/tests/: test_cli.py  test_services.py
