[tool.poetry]
name = "ai-gemini-cli"
version = "0.1.0"
description = "A command-line interface bot using the Gemini API."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/ai-gemini-cli"
repository = "https://github.com/yourusername/ai-gemini-cli"
keywords = ["AI", "CLI", "Gemini", "bot"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
click = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"