[tool.poetry]
name = "ai-gemini-cli"
version = "0.2.0"
description = "A command-line interface bot using the Gemini API."
authors = ["Raditya <dittprabawa@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/paysec999"
repository = "https://github.com/paysec999/botcli"
keywords = ["AI", "CLI", "Gemini", "bot"]

[[tool.poetry.packages]]
include = "ai_gemini"
from = "src"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
click = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"